--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "bevy_github_ci_template"
+name = "tetris"
 version = "0.1.0"
 edition = "2021"
-license = "MIT OR Apache-2.0 OR CC0-1.0"
+license = "Apache-2.0"
 
 # Compile with Performance Optimizations:
 # https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations
@@ -11,9 +11,20 @@ license = "MIT OR Apache-2.0 OR CC0-1.0"
 [profile.dev]
 opt-level = 1
 
+# https://github.com/johnthagen/min-sized-rust
+[profile.release]
+lto = "thin"
+strip = true      # Automatically strip symbols from the binary.
+opt-level = "z"   # Optimize for size.
+panic = "abort"
+codegen-units = 1
+
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
 
 [dependencies]
-bevy = "0.11"
+bevy = "0.12.1"
+bevy-inspector-egui="0.21.0"
+rand = "0.8.5"
+lazy_static = "1.4"
