--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -4,6 +4,10 @@ on:
   push:
     tags:
       - '*'
+    branches: [main]
+  pull_request:
+    branches: [main]
+    types: [opened, reopened]
 
 env:
   # update with the name of the main binary
