--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -14,7 +14,7 @@ env:
   # update with the name of the main binary
   binary: tetris
   add_binaries_to_github_release: true
-  itch_target: <windysha>/<tetris>
+  itch_target: windysha/tetris
 
 
 jobs:
